test/org/midica/testfiles/failing/const-without-args.midica
INCLUDE inc/instruments.midica

CONST 

CHORD test $crd

0  test  /4
